--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/ChocolateSyrup/ChocolateSyrup.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/ChocolateSyrup/ChocolateSyrup.scss
@@ -1,4 +1,7 @@
 .ChocolateSyrup{
+    width: 100%;
+    text-align: center;
+    color: white;
     margin: 1px 1px;
     background: linear-gradient(270deg, #b11e1e, #dd8e30, #e86d32);
     background-size: 600% 600%;
