--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/Espresso/Espresso.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/Espresso/Espresso.scss
@@ -1,4 +1,7 @@
 .Espresso{
+    width: 100%;
+    text-align: center;
+    color: white;
     margin: 1px 1px;
     background: linear-gradient(270deg, #4e2a2a, #866d4f, #956224);
     background-size: 600% 600%;
