--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/Liquor/Liquor.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/Liquor/Liquor.scss
@@ -1,4 +1,7 @@
 .Liquor{
+    width: 100%;
+    text-align: center;
+    color: white;
     margin: 1px 1px;
     background: linear-gradient(270deg, #f7b303, #90723e, #f9e2bc);
     background-size: 600% 600%;
