--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/MilkFoam/MilkFoam.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/MilkFoam/MilkFoam.scss
@@ -1,4 +1,6 @@
 .MilkFoam{
+    width: 100%;
+    text-align: center;
     margin: 1px 1px;
     background: linear-gradient(270deg, #fefcff, #e2e7e8);
     background-size: 400% 400%;
