--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/Water/Water.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/Water/Water.scss
@@ -1,4 +1,6 @@
 .Water{
+    width: 100%;
+    text-align: center;
     margin: 1px 1px;
     background: linear-gradient(270deg, #83d4f3, #b1deef);
     background-size: 400% 400%;
