--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/WhippedCream/WhippedCream.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/WhippedCream/WhippedCream.scss
@@ -1,6 +1,8 @@
-$hippedCream-color: #f1ecd6;
+$whippedCream-color: #f1ecd6;
 
 .WhippedCream{
+    text-align: center;
+    width: 100%;
     margin: 1px 1px;
-    background-color: $hippedCream-color;
+    background-color: $whippedCream-color;
 }
