--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/MilkFoam/MilkFoam.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/MilkFoam/MilkFoam.scss
@@ -1,5 +1,9 @@
+$cup-width: 200px;
+$cup-height: $cup-width * 1.2;
+
 .MilkFoam{
-    width: 100%;
+    width: 99%;
+    height: $cup-height/10;
     text-align: center;
     margin: 1px 1px;
     background: linear-gradient(270deg, #fefcff, #e2e7e8);
