--- a/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/SteamedMilk/SteamedMilk.scss
+++ b/src/components/Coffeemenu/CoffeeCup/CoffeeIngredient/SteamedMilk/SteamedMilk.scss
@@ -1,6 +1,10 @@
+$cup-width: 200px;
+$cup-height: $cup-width * 1.2;
+
 .SteamedMilk{
+    width: 99%;
+    height: $cup-height/10;
     text-align: center;
-    width: 100%;
     margin: 1px 1px;
     background-color: #DCD9CD;
 }
