--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -10,15 +10,15 @@
     font-weight: bold;
 }
 
-.Button:first-of-type {
-    margin-left: 0;
-    padding-left: 0;
-}
+// .Button:first-of-type {
+//     margin-left: 0;
+//     padding-left: 0;
+// }
 
 .Success {
-    color: #5C9210;
+    color: #37fb00;
 }
 
 .Danger {
-    color: #944317;
+    color: #f97979;
 }
