--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -1,18 +1,36 @@
 .Modal {
+    display: flex;
+    flex-direction: column ;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     z-index: 500;
-    background-color: white;
+    min-height: 80%;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     left: 15%;
-    top: 30%;
+    top: 5%;
     box-sizing: border-box;
+
+    color: white;
     transition: all 0.3s ease-out;
     @media (min-width: 600px) {
         width: 500px;
         left: calc(50% - 250px);
+    }
+
+    background: linear-gradient(272deg, #7c2e00, #c8703c, #552000);
+    background-size: 600% 600%;
+
+    animation: AnimationName 30s ease infinite;
+
+    @keyframes AnimationName { 
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
     }
 }
 
