--- a/src/components/Order/Order.scss
+++ b/src/components/Order/Order.scss
@@ -5,4 +5,15 @@
     padding: 10px;
     margin: 10px auto;
     box-sizing: border-box;
+    background: linear-gradient(270deg, #e4701e, #aa4c0a, #a26940);
+    background-size: 600% 600%;
+
+    animation: AnimationName 30s ease infinite;
+
+    @keyframes AnimationName { 
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    color: white;
 }
